--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
-  background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50);
+  /* background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=50); */
+  background-color: #141204;
   background-size: cover;
   font-family: 'helvetica neue';
   text-align: center;
@@ -16,14 +17,14 @@ body {
 }
 
 .clock {
-  width: 30rem;
-  height: 30rem;
-  border: 20px solid white;
+  width: 20rem;
+  height: 20rem;
+  border: 12px solid white;
   border-radius: 50%;
   margin: 50px auto;
   position: relative;
   padding: 2rem;
-  box-shadow:
+  /* box-shadow: */
     0 0 0 4px rgba(0,0,0,0.1),
     inset 0 0 0 3px #EFEFEF,
     inset 0 0 10px black,
@@ -40,10 +41,20 @@ body {
 .hand {
   width: 50%;
   height: 6px;
-  background: black;
+  border-radius: 5px;
+  background: #efefef;
   position: absolute;
   top: 50%;
   transform: rotate(90deg);
   transform-origin: 100%;
   transition: all 150ms cubic-bezier(1, -0.45, 0, 1.95);
+}
+
+.second-hand {
+  background: #8C1C13;
+}
+
+.hour-hand {
+  width: 35%;
+  left: 15%;
 }
